# hosa

./: .gitignore  TODOS  hosa.cabal  stack.yaml
examples/: add.atrs  addfold.atrs  append.atrs  appendall.atrs  appendtwice.atrs  dfs-flatten.atrs  double-systematic.atrs  double.atrs  doublefilter.atrs  doublem-addhoc.atrs  doublem-haskell.atrs  fmap_tree.atrs  insertionsort.atrs  insertsort.atrs  mapplus.atrs  mapsucc.atrs  mergesort-dc.atrs  mergesort.atrs  mult.atrs  multfold.atrs  prependall.atrs  product.atrs  recscheme.atrs  rev-dl-contrived.atrs  rev-dl.atrs  reverse.atrs  strstr.atrs
examples/prob/: geo.atrs  rw.atrs
hosa/: Main.hs
src/HoSA/: CallSite.hs  Index.hs  Infer.hs  Parse.hs  SizeType.hs  Solve.hs  Ticking.hs  Utils.hs
src/HoSA/Data/: CallSite.hs  Expression.hs  Index.hs  MLTypes.hs  Program.hs  Rewriting.hs  SimpleType.hs  SimplyTypedProgram.hs  SizeType.hs
src/HoSA/Data/Program/: CallSite.hs  DMInfer.hs  Equation.hs  Expression.hs  Parse.hs  Pretty.hs  Types.hs
src/HoSA/SizeType/: Index.hs  Infer.hs  SOConstraint.hs  Solve.hs  Type.hs
