name:                  hosa
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Martin Avanzini
maintainer:            martin.avanzini@uibk.ac.at
category:              Logic
build-type:            Simple
cabal-version:         >=1.10
                       
library
  exposed-modules:
                       HoSA.Utils
                       HoSA.Data.Rewriting
                       HoSA.Data.SimpleType
                       HoSA.Data.CallSite
                       HoSA.SizeType.Type                  
                       HoSA.SizeType.Index
                       HoSA.SizeType.Infer
                       HoSA.SizeType.Solve
  other-extensions:    
  build-depends:       ansi-wl-pprint >= 0.6 && < 0.7,
                       base >= 4.8 && <4.9,
                       cmdargs >= 0.10.13,
                       containers >=0.5 && <0.6,
                       monad-trace >=0.1 && <0.2,
                       gubs >=0.2 && < 0.3,
                       mtl >=2.2 && <2.3,
                       smtlib2 >=0.3 && < 0.4,
                       transformers >=0.4 && <0.5,
                       ifscs >=0.2 && <0.3,
                       parsec >= 3.1 && < 3.2                       
                       
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  StandaloneDeriving,
                       DeriveFunctor,
                       DeriveFoldable,
                       GeneralizedNewtypeDeriving,
                       DeriveTraversable,
                       ConstraintKinds,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       RecordWildCards,
                       ViewPatterns,
                       DataKinds,
                       TypeFamilies,
                       TupleSections,
                       TypeOperators,
                       PatternSynonyms,
                       DeriveDataTypeable,                       
                       GADTs

executable hosa
 hs-source-dirs: hosa
 default-language:    Haskell2010 
 main-is: Main.hs
 build-depends: hosa,
                base >= 4.7 && < 5,
                mtl >=2.2 && <2.3,       
                containers >= 0.5 && < 0.6,
                cmdargs >= 0.10 && < 0.11,
                ansi-wl-pprint >= 0.6 && < 0.7,
                gubs >=0.2 && < 0.3
 default-extensions: TypeOperators,
                     DeriveDataTypeable,
                     FlexibleContexts,
                     TypeSynonymInstances,
                     FlexibleInstances,
                     StandaloneDeriving