name:                  hosa
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Martin Avanzini
maintainer:            martin.avanzini@uibk.ac.at
category:              Logic
build-type:            Simple
cabal-version:         >=1.10
                       
library
  ghc-options:         -threaded -Wall -Werror -fno-warn-orphans -O2
        
  exposed-modules:
                       HoSA.Utils
                       HoSA.Ticking
                       HoSA.Data.MLTypes
                       HoSA.Data.Program
                       HoSA.Data.Program.Types
                       HoSA.Data.Program.Expression
                       HoSA.Data.Program.Equation                  
                       HoSA.Data.Program.DMInfer
                       HoSA.Data.Program.Pretty
                       HoSA.Data.Program.Parse
                       HoSA.Data.Program.CallSite
                       HoSA.Data.SizeType                  
                       HoSA.Data.Index
                       HoSA.SizeType.Infer
                       HoSA.SizeType.SOConstraint
  other-extensions:    
  build-depends:       ansi-wl-pprint,
                       base,
                       cmdargs,
                       containers,
                       monad-trace,
                       gubs,
                       mtl,
                       transformers,
                       parsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  StandaloneDeriving,
                       DeriveFunctor,
                       DeriveFoldable,
                       GeneralizedNewtypeDeriving,
                       DeriveTraversable,
                       ConstraintKinds,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       RecordWildCards,
                       ViewPatterns,
                       DataKinds,
                       TypeFamilies,
                       TupleSections, 
                       TypeOperators,
                       PatternSynonyms,
                       DeriveDataTypeable,
                       ScopedTypeVariables,
                       GADTs

executable hosa
 hs-source-dirs: hosa
 ghc-options:    -threaded -Wall -O2 
 default-language: Haskell2010 
 main-is: Main.hs
 build-depends: hosa,
                base,
                mtl,       
                containers,
                cmdargs,
                ansi-wl-pprint,
                gubs
 default-extensions: TypeOperators,
                     DeriveDataTypeable,
                     FlexibleContexts,
                     TypeSynonymInstances,
                     FlexibleInstances,
                     ViewPatterns,                     
                     StandaloneDeriving,
                     TupleSections,                      
                     GADTs                     